fix spacing of footer forum and rename file

--- a/_sass/forum-layout.scss
+++ b/_sass/forum-layout.scss
@@ -133,4 +133,8 @@
       width: 12px;
     }
   }
+
+  .footer-spacing {
+    margin-bottom: 68px;
+  }
 }
